Pull request #1136: AG-11548 Fix styles for popup
Merge in EXTENSIONS/browser-extension from feature/AG-11548-1 to master

Squashed commit of the following:

commit 74f313ea92f5a004943075523c06e6975126d888
Merge: a87e92bf7 4efb4f268
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Dec 7 18:35:41 2021 +0300

    Merge branch 'master' into feature/AG-11548-1

commit a87e92bf7639317e97aae3f24b665782663c1451
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Dec 7 17:54:35 2021 +0300

    AG-11548 header buttons radius

commit 25c4b348d43ba5710015c191ed8ac2c7a7747408
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Dec 7 15:51:58 2021 +0300

    AG-11548 fix link color

commit 3821b853426e529614a8882746679d8ce559e00e
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Dec 7 13:51:39 2021 +0300

    AG-11548 Fix styles for popup

--- a/Extension/src/pages/popup/components/Main/main.pcss
+++ b/Extension/src/pages/popup/components/Main/main.pcss
@@ -17,7 +17,20 @@
     &__cta-link {
         text-align: center;
         font-size: 12px;
-        opacity: 0.6;
+        color: var(--gray700);
+        transition: var(--t3) color;
+
+        @media (prefers-color-scheme: dark) {
+            color: var(--gray400);
+        }
+
+        &:hover {
+            color: var(--gray900);
+
+            @media (prefers-color-scheme: dark) {
+                color: var(--gray100);
+            }
+        }
     }
 
     &__total-blocked-tab {
@@ -158,7 +171,12 @@
 
     &:hover {
         & .switcher__btn {
-            transform: scale(1.03);
+            transition: var(--t3) box-shadow;
+            box-shadow: 0 0 0 6px rgba(0, 0, 0, 0.1);
+
+            @media (prefers-color-scheme: dark) {
+                box-shadow: 0 0 0 6px rgba(255, 255, 255, 0.2);
+            }
         }
     }
 
@@ -238,11 +256,43 @@
 .light-mode {
     .main {
         color: var(--gray900);
+
+        &__cta-link {
+            color: var(--gray700);
+
+            &:hover {
+                color: var(--gray900);
+            }
+        }
+    }
+
+    .switcher {
+        &:hover {
+            & .switcher__btn {
+                box-shadow: 0 0 0 6px rgba(0, 0, 0, 0.1);
+            }
+        }
     }
 }
 
 .dark-mode {
     .main {
         color: var(--gray300);
+
+        &__cta-link {
+            color: var(--gray400);
+
+            &:hover {
+                color: var(--gray100);
+            }
+        }
+    }
+
+    .switcher {
+        &:hover {
+            & .switcher__btn {
+                box-shadow: 0 0 0 6px rgba(255, 255, 255, 0.2);
+            }
+        }
     }
 }
