--- a/Extension/src/pages/popup/components/MainContainer/main-container.pcss
+++ b/Extension/src/pages/popup/components/MainContainer/main-container.pcss
@@ -1,26 +1,3 @@
 .main-container {
     height: 300px;
-    border-top: 1px solid #efefef;
-    border-bottom: 1px solid #efefef;
-
-    @media (prefers-color-scheme: dark) {
-        border-top: 1px solid #2f2f2f;
-        border-bottom: 1px solid #2f2f2f;
-    }
-}
-
-.light-mode {
-    .main-container {
-        background-color: var(--white);
-        border-top: 1px solid #efefef;
-        border-bottom: 1px solid #efefef;
-    }
-}
-
-.dark-mode {
-    .main-container {
-        background-color: var(--black);
-        border-top: 1px solid #2f2f2f;
-        border-bottom: 1px solid #2f2f2f;
-    }
 }
