--- a/Extension/src/pages/popup/components/ui/icons.pcss
+++ b/Extension/src/pages/popup/components/ui/icons.pcss
@@ -8,6 +8,11 @@
         height: 24px;
     }
 
+    &--settings {
+        width: 20px;
+        height: 20px;
+    }
+
     &--logo {
         width: 113px;
         height: 25px;
